; ModuleID = '/home/carl/AnghaBench/h2o/examples/libh2o/extr_websocket.c_setup_ssl.c'
source_filename = "/home/carl/AnghaBench/h2o/examples/libh2o/extr_websocket.c_setup_ssl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@accept_ctx = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@SSL_OP_NO_SSLv2 = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [67 x i8] c"an error occurred while trying to load server certificate file:%s\0A\00", align 1
@SSL_FILETYPE_PEM = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [60 x i8] c"an error occurred while trying to load private key file:%s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @setup_ssl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @setup_ssl(i8* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  %6 = call i32 (...) @SSL_load_error_strings()
  %7 = call i32 (...) @SSL_library_init()
  %8 = call i32 (...) @OpenSSL_add_all_algorithms()
  %9 = call i32 (...) @SSLv23_server_method()
  %10 = call i32 @SSL_CTX_new(i32 %9)
  store i32 %10, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @accept_ctx, i32 0, i32 0), align 4
  %11 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @accept_ctx, i32 0, i32 0), align 4
  %12 = load i32, i32* @SSL_OP_NO_SSLv2, align 4
  %13 = call i32 @SSL_CTX_set_options(i32 %11, i32 %12)
  %14 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @accept_ctx, i32 0, i32 0), align 4
  %15 = load i8*, i8** %4, align 8
  %16 = call i32 @SSL_CTX_use_certificate_chain_file(i32 %14, i8* %15)
  %17 = icmp ne i32 %16, 1
  br i1 %17, label %18, label %22

18:                                               ; preds = %2
  %19 = load i32, i32* @stderr, align 4
  %20 = load i8*, i8** %4, align 8
  %21 = call i32 @fprintf(i32 %19, i8* getelementptr inbounds ([67 x i8], [67 x i8]* @.str, i64 0, i64 0), i8* %20)
  store i32 -1, i32* %3, align 4
  br label %33

22:                                               ; preds = %2
  %23 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @accept_ctx, i32 0, i32 0), align 4
  %24 = load i8*, i8** %5, align 8
  %25 = load i32, i32* @SSL_FILETYPE_PEM, align 4
  %26 = call i32 @SSL_CTX_use_PrivateKey_file(i32 %23, i8* %24, i32 %25)
  %27 = icmp ne i32 %26, 1
  br i1 %27, label %28, label %32

28:                                               ; preds = %22
  %29 = load i32, i32* @stderr, align 4
  %30 = load i8*, i8** %5, align 8
  %31 = call i32 @fprintf(i32 %29, i8* getelementptr inbounds ([60 x i8], [60 x i8]* @.str.1, i64 0, i64 0), i8* %30)
  store i32 -1, i32* %3, align 4
  br label %33

32:                                               ; preds = %22
  store i32 0, i32* %3, align 4
  br label %33

33:                                               ; preds = %32, %28, %18
  %34 = load i32, i32* %3, align 4
  ret i32 %34
}

declare dso_local i32 @SSL_load_error_strings(...) #1

declare dso_local i32 @SSL_library_init(...) #1

declare dso_local i32 @OpenSSL_add_all_algorithms(...) #1

declare dso_local i32 @SSL_CTX_new(i32) #1

declare dso_local i32 @SSLv23_server_method(...) #1

declare dso_local i32 @SSL_CTX_set_options(i32, i32) #1

declare dso_local i32 @SSL_CTX_use_certificate_chain_file(i32, i8*) #1

declare dso_local i32 @fprintf(i32, i8*, i8*) #1

declare dso_local i32 @SSL_CTX_use_PrivateKey_file(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
